// 使用proto3的语法
syntax = "proto3";

// 生成多个java类
option java_multiple_files = true;
// 生成java类所在的包
option java_package = "com.gqfly.news.server.proto.news";
// 生成java外层类的类名
option java_outer_classname = "NewsProto";

// 声明逻辑包名
package news;

// 定义rpc服务
service NewsService {
    rpc list(NewsRequest) returns (NewsResponse);
    rpc hello(StringRequest) returns (StringResponse);
}

// 定义消息
message NewsRequest {
    string date = 1;
}

message NewsResponse {
    repeated News news = 1;
}

message News {
    int32 id = 1;
    string title = 2;
    string content = 3;
    int64 createTime = 4;
}

message StringRequest {
    string name = 1;
}

message StringResponse {
    string result = 1;
}